--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -15,7 +15,7 @@
   "app-title-citations": "اقتباسات",
   "app-guide-see-more": "شاهد المزيد",
   "app-guide-page": "صفحة",
-  "app-guide-news": "الاحداث الحالية",
+  "app-guide-current-events": "الاحداث الحالية",
   "app-guide-topic": "عنوان",
   "app-guide-artwork": "تلوين",
   "app-guide-organism": "كائن حي",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-clone-tab": "علامة التبويب استنساخ",
   "app-menu-plant-identification": "تحديد النبات",
