--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citacions",
   "app-guide-see-more": "veure més",
   "app-guide-page": "pàgina",
-  "app-guide-news": "esdeveniments actuals",
+  "app-guide-current-events": "esdeveniments actuals",
   "app-guide-topic": "tema",
   "app-guide-artwork": "pintura",
   "app-guide-organism": "organisme",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "marca la vista actual",
   "app-menu-clone-tab": "pestanya de clonació",
   "app-menu-plant-identification": "identificació de plantes",
