--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Mga kinutlo",
   "app-guide-see-more": "tan-awa pa",
   "app-guide-page": "panid",
-  "app-guide-news": "kasamtangan nga mga panghitabo",
+  "app-guide-current-events": "kasamtangan nga mga panghitabo",
   "app-guide-topic": "hilisgutan",
   "app-guide-artwork": "pagpintal",
   "app-guide-organism": "organismo",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-clone-tab": "clone nga tab",
   "app-menu-plant-identification": "pag-ila sa tanom",
