--- a/app/explore2/assets/i18n/conzept-da.json
+++ b/app/explore2/assets/i18n/conzept-da.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citater",
   "app-guide-see-more": "se mere",
   "app-guide-page": "side",
-  "app-guide-news": "aktuelle begivenheder",
+  "app-guide-current-events": "aktuelle begivenheder",
   "app-guide-topic": "emne",
   "app-guide-artwork": "maleri",
   "app-guide-organism": "organisme",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
   "app-menu-clone-tab": "klon fane",
   "app-menu-plant-identification": "planteidentifikation",
