--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Zitate",
   "app-guide-see-more": "Mehr sehen",
   "app-guide-page": "Seite",
-  "app-guide-news": "aktuelle Ereignisse",
+  "app-guide-current-events": "aktuelle Ereignisse",
   "app-guide-topic": "Thema",
   "app-guide-artwork": "Malerei",
   "app-guide-organism": "Organismus",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
   "app-menu-clone-tab": "Registerkarte „Klonen“.",
   "app-menu-plant-identification": "Pflanzenidentifikation",
