--- a/app/explore2/assets/i18n/conzept-en.json
+++ b/app/explore2/assets/i18n/conzept-en.json
@@ -170,7 +170,7 @@
   "app-guide-bookmark-history": "history",
   "app-guide-see-more": "see more",
   "app-guide-page": "page",
-  "app-guide-news": "current events",
+  "app-guide-current-events": "current events",
   "app-guide-topic": "topic",
   "app-guide-artwork": "painting",
   "app-guide-organism": "organism",
@@ -242,7 +242,7 @@
   "app-guide-news-radio": "radio",
   "app-guide-news-tv": "TV",
   "app-guide-news-economic-indicators": "economic indicators",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-guide-conflict-map": "conflict map",
   "app-guide-ongoing-conflicts": "conflicts",
   "app-guide-radio": "radio",
