--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -15,7 +15,7 @@
   "app-title-citations": "استناد",
   "app-guide-see-more": "بیشتر ببین",
   "app-guide-page": "صفحه",
-  "app-guide-news": "رویدادهای جاری",
+  "app-guide-current-events": "رویدادهای جاری",
   "app-guide-topic": "موضوع",
   "app-guide-artwork": "رنگ آمیزی",
   "app-guide-organism": "ارگانیسم",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "نمای فعلی نشانک",
   "app-menu-clone-tab": "تب کلون",
   "app-menu-plant-identification": "شناسایی گیاه",
