--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Lainaukset",
   "app-guide-see-more": "Katso lisää",
   "app-guide-page": "sivu",
-  "app-guide-news": "ajankohtaiset tapahtumat",
+  "app-guide-current-events": "ajankohtaiset tapahtumat",
   "app-guide-topic": "aihe",
   "app-guide-artwork": "maalaus",
   "app-guide-organism": "organismi",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "merkitse nykyinen näkymä kirjanmerkkeihin",
   "app-menu-clone-tab": "klooni-välilehti",
   "app-menu-plant-identification": "kasvin tunnistaminen",
