--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citations",
   "app-guide-see-more": "voir plus",
   "app-guide-page": "page",
-  "app-guide-news": "événements actuels",
+  "app-guide-current-events": "événements actuels",
   "app-guide-topic": "sujet",
   "app-guide-artwork": "peinture",
   "app-guide-organism": "organisme",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "ajouter la vue actuelle aux favoris",
   "app-menu-clone-tab": "onglet cloner",
   "app-menu-plant-identification": "identification des plantes",
