--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -15,7 +15,7 @@
   "app-title-citations": "ambato",
   "app-guide-see-more": "karin gani",
   "app-guide-page": "shafi",
-  "app-guide-news": "abubuwan da ke faruwa a yanzu",
+  "app-guide-current-events": "abubuwan da ke faruwa a yanzu",
   "app-guide-topic": "batu",
   "app-guide-artwork": "zanen",
   "app-guide-organism": "kwayoyin halitta",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
   "app-menu-clone-tab": "clone tab",
   "app-menu-plant-identification": "ganewar shuka",
