--- a/app/explore2/assets/i18n/conzept-hi.json
+++ b/app/explore2/assets/i18n/conzept-hi.json
@@ -15,7 +15,7 @@
   "app-title-citations": "उद्धरण",
   "app-guide-see-more": "और देखें",
   "app-guide-page": "पृष्ठ",
-  "app-guide-news": "वर्तमान घटनाएं",
+  "app-guide-current-events": "वर्तमान घटनाएं",
   "app-guide-topic": "विषय",
   "app-guide-artwork": "चित्रकारी",
   "app-guide-organism": "जीव",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "वर्तमान दृश्य को बुकमार्क करें",
   "app-menu-clone-tab": "क्लोन टैब",
   "app-menu-plant-identification": "पौधे की पहचान",
