--- a/app/explore2/assets/i18n/conzept-hr.json
+++ b/app/explore2/assets/i18n/conzept-hr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citati",
   "app-guide-see-more": "vidi više",
   "app-guide-page": "stranica",
-  "app-guide-news": "tekuće događaje",
+  "app-guide-current-events": "tekuće događaje",
   "app-guide-topic": "tema",
   "app-guide-artwork": "slika",
   "app-guide-organism": "organizam",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "označi trenutni prikaz",
   "app-menu-clone-tab": "kartica kloniranja",
   "app-menu-plant-identification": "identifikacija biljke",
