--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Kutipan",
   "app-guide-see-more": "lihat lebih banyak",
   "app-guide-page": "halaman",
-  "app-guide-news": "Peristiwa saat ini",
+  "app-guide-current-events": "Peristiwa saat ini",
   "app-guide-topic": "tema",
   "app-guide-artwork": "lukisan",
   "app-guide-organism": "organisme",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "tandai tampilan saat ini",
   "app-menu-clone-tab": "tab klon",
   "app-menu-plant-identification": "identifikasi tanaman",
