--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citazioni",
   "app-guide-see-more": "Vedi altro",
   "app-guide-page": "pagina",
-  "app-guide-news": "eventi attuali",
+  "app-guide-current-events": "eventi attuali",
   "app-guide-topic": "argomento",
   "app-guide-artwork": "pittura",
   "app-guide-organism": "organismo",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-clone-tab": "scheda clone",
   "app-menu-plant-identification": "identificazione delle piante",
