--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "उद्धरण",
   "app-guide-see-more": "अजून पहा",
   "app-guide-page": "पृष्ठ",
-  "app-guide-news": "सद्य घटना",
+  "app-guide-current-events": "सद्य घटना",
   "app-guide-topic": "विषय",
   "app-guide-artwork": "चित्रकला",
   "app-guide-organism": "जीव",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "बुकमार्क वर्तमान दृश्य",
   "app-menu-clone-tab": "क्लोन टॅब",
   "app-menu-plant-identification": "वनस्पती ओळख",
