--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -15,7 +15,7 @@
   "app-title-citations": "citaten",
   "app-guide-see-more": "bekijk meer",
   "app-guide-page": "bladzijde",
-  "app-guide-news": "nieuws",
+  "app-guide-current-events": "nieuws",
   "app-guide-topic": "onderwerp",
   "app-guide-artwork": "schilderen",
   "app-guide-organism": "organisme",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselecteer alles",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "bladwijzer huidige URL",
   "app-menu-clone-tab": "tabblad kloon",
   "app-menu-plant-identification": "identificatie van planten",
