--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citat",
   "app-guide-see-more": "se mer",
   "app-guide-page": "sida",
-  "app-guide-news": "Nyheter",
+  "app-guide-current-events": "Nyheter",
   "app-guide-topic": "ämne",
   "app-guide-artwork": "målning",
   "app-guide-organism": "organism",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "bokmärke aktuell URL",
   "app-menu-clone-tab": "klonfliken",
   "app-menu-plant-identification": "anläggningsidentifiering",
