--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Manukuu",
   "app-guide-see-more": "ona zaidi",
   "app-guide-page": "ukurasa",
-  "app-guide-news": "matukio ya sasa",
+  "app-guide-current-events": "matukio ya sasa",
   "app-guide-topic": "mada",
   "app-guide-artwork": "uchoraji",
   "app-guide-organism": "viumbe",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
   "app-menu-clone-tab": "kichupo cha clone",
   "app-menu-plant-identification": "kitambulisho cha mimea",
