--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -15,7 +15,7 @@
   "app-title-citations": "అనులేఖనాలు",
   "app-guide-see-more": "ఇంకా చూడండి",
   "app-guide-page": "పేజీ",
-  "app-guide-news": "ప్రస్తుత ఘటనలు",
+  "app-guide-current-events": "ప్రస్తుత ఘటనలు",
   "app-guide-topic": "అంశం",
   "app-guide-artwork": "పెయింటింగ్",
   "app-guide-organism": "జీవి",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "బుక్‌మార్క్ ప్రస్తుత వీక్షణ",
   "app-menu-clone-tab": "క్లోన్ ట్యాబ్",
   "app-menu-plant-identification": "మొక్క గుర్తింపు",
