--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Цитування",
   "app-guide-see-more": "побачити більше",
   "app-guide-page": "сторінки",
-  "app-guide-news": "поточні події",
+  "app-guide-current-events": "поточні події",
   "app-guide-topic": "тема",
   "app-guide-artwork": "живопис",
   "app-guide-organism": "організм",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
   "app-menu-clone-tab": "клонувати вкладку",
   "app-menu-plant-identification": "ідентифікація рослин",
