--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -15,7 +15,7 @@
   "app-title-citations": "حوالہ جات",
   "app-guide-see-more": "دیکھیں مزید",
   "app-guide-page": "صفحہ",
-  "app-guide-news": "موجودہ واقعات",
+  "app-guide-current-events": "موجودہ واقعات",
   "app-guide-topic": "موضوع",
   "app-guide-artwork": "پینٹنگ",
   "app-guide-organism": "حیاتیات",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "موجودہ منظر کو بُک مارک کریں۔",
   "app-menu-clone-tab": "کلون ٹیب",
   "app-menu-plant-identification": "پلانٹ کی شناخت",
