--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Trích dẫn",
   "app-guide-see-more": "xem thêm",
   "app-guide-page": "trang",
-  "app-guide-news": "sự kiện hiện tại",
+  "app-guide-current-events": "sự kiện hiện tại",
   "app-guide-topic": "đề tài",
   "app-guide-artwork": "bức vẽ",
   "app-guide-organism": "sinh vật",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
   "app-menu-clone-tab": "tab nhân bản",
   "app-menu-plant-identification": "nhận dạng thực vật",
