--- a/app/explore2/assets/i18n/conzept-zh.json
+++ b/app/explore2/assets/i18n/conzept-zh.json
@@ -15,7 +15,7 @@
   "app-title-citations": "引文",
   "app-guide-see-more": "查看更多",
   "app-guide-page": "页",
-  "app-guide-news": "现在发生的事",
+  "app-guide-current-events": "现在发生的事",
   "app-guide-topic": "话题",
   "app-guide-artwork": "绘画",
   "app-guide-organism": "生物",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "为当前视图添加书签",
   "app-menu-clone-tab": "克隆选项卡",
   "app-menu-plant-identification": "植物鉴定",
