--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -15,7 +15,7 @@
   "app-title-citations": "উদ্ধৃতি",
   "app-guide-see-more": "আরো দেখুন",
   "app-guide-page": "পৃষ্ঠা",
-  "app-guide-news": "বর্তমান ঘটনা",
+  "app-guide-current-events": "বর্তমান ঘটনা",
   "app-guide-topic": "বিষয়",
   "app-guide-artwork": "পেইন্টিং",
   "app-guide-organism": "জীব",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
   "app-menu-clone-tab": "ক্লোন ট্যাব",
   "app-menu-plant-identification": "উদ্ভিদ সনাক্তকরণ",
