--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citas",
   "app-guide-see-more": "ver más",
   "app-guide-page": "página",
-  "app-guide-news": "eventos actuales",
+  "app-guide-current-events": "eventos actuales",
   "app-guide-topic": "tema",
   "app-guide-artwork": "cuadro",
   "app-guide-organism": "organismo",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "marcar vista actual",
   "app-menu-clone-tab": "pestaña clonar",
   "app-menu-plant-identification": "identificación de plantas",
