--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -15,7 +15,7 @@
   "app-title-citations": "引用",
   "app-guide-see-more": "続きを見る",
   "app-guide-page": "ページ",
-  "app-guide-news": "時事問題",
+  "app-guide-current-events": "時事問題",
   "app-guide-topic": "トピック",
   "app-guide-artwork": "絵画",
   "app-guide-organism": "生命体",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "現在のビューをブックマークする",
   "app-menu-clone-tab": "クローンタブ",
   "app-menu-plant-identification": "植物の同定",
