--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -15,7 +15,7 @@
   "app-title-citations": "인용",
   "app-guide-see-more": "더보기",
   "app-guide-page": "페이지",
-  "app-guide-news": "현재 이벤트",
+  "app-guide-current-events": "현재 이벤트",
   "app-guide-topic": "주제",
   "app-guide-artwork": "그림",
   "app-guide-organism": "유기체",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
   "app-menu-clone-tab": "복제 탭",
   "app-menu-plant-identification": "식물 식별",
