--- a/app/explore2/assets/i18n/conzept-no.json
+++ b/app/explore2/assets/i18n/conzept-no.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Sitater",
   "app-guide-see-more": "se mer",
   "app-guide-page": "side",
-  "app-guide-news": "aktuelle hendelser",
+  "app-guide-current-events": "aktuelle hendelser",
   "app-guide-topic": "emne",
   "app-guide-artwork": "maleri",
   "app-guide-organism": "organisme",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "bokmerke gjeldende visning",
   "app-menu-clone-tab": "klone-fanen",
   "app-menu-plant-identification": "planteidentifikasjon",
