--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Citações",
   "app-guide-see-more": "ver mais",
   "app-guide-page": "página",
-  "app-guide-news": "eventos atuais",
+  "app-guide-current-events": "eventos atuais",
   "app-guide-topic": "tema",
   "app-guide-artwork": "pintura",
   "app-guide-organism": "organismo",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "marcar a visualização atual",
   "app-menu-clone-tab": "guia clonar",
   "app-menu-plant-identification": "identificação de plantas",
