--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Цитаты",
   "app-guide-see-more": "узнать больше",
   "app-guide-page": "страница",
-  "app-guide-news": "текущие события",
+  "app-guide-current-events": "текущие события",
   "app-guide-topic": "тема",
   "app-guide-artwork": "рисование",
   "app-guide-organism": "организм",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
   "app-menu-clone-tab": "клонировать вкладку",
   "app-menu-plant-identification": "идентификация растений",
