--- a/app/explore2/assets/i18n/conzept-sr.json
+++ b/app/explore2/assets/i18n/conzept-sr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Цитати",
   "app-guide-see-more": "види више",
   "app-guide-page": "страна",
-  "app-guide-news": "Актуелности",
+  "app-guide-current-events": "Актуелности",
   "app-guide-topic": "тема",
   "app-guide-artwork": "сликарство",
   "app-guide-organism": "организам",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "обележи тренутни приказ",
   "app-menu-clone-tab": "клон картица",
   "app-menu-plant-identification": "идентификација биљке",
