--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -15,7 +15,7 @@
   "app-title-citations": "மேற்கோள்கள்",
   "app-guide-see-more": "மேலும் பார்க்க",
   "app-guide-page": "பக்கம்",
-  "app-guide-news": "தற்போதைய நிகழ்வுகள்",
+  "app-guide-current-events": "தற்போதைய நிகழ்வுகள்",
   "app-guide-topic": "தலைப்பு",
   "app-guide-artwork": "ஓவியம்",
   "app-guide-organism": "உயிரினம்",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "புக்மார்க் தற்போதைய காட்சி",
   "app-menu-clone-tab": "குளோன் தாவல்",
   "app-menu-plant-identification": "தாவர அடையாளம்",
