--- a/app/explore2/assets/i18n/conzept-tr.json
+++ b/app/explore2/assets/i18n/conzept-tr.json
@@ -15,7 +15,7 @@
   "app-title-citations": "Alıntılar",
   "app-guide-see-more": "daha fazla gör",
   "app-guide-page": "sayfa",
-  "app-guide-news": "güncel olaylar",
+  "app-guide-current-events": "güncel olaylar",
   "app-guide-topic": "başlık",
   "app-guide-artwork": "tablo",
   "app-guide-organism": "organizma",
@@ -77,7 +77,7 @@
   "app-guide-bookmarks-deselect-all": "deselect all",
   "app-menu-upload-json": "upload",
   "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "world statistics",
+  "app-guide-world-statistics": "development trends",
   "app-menu-bookmark-current-view": "geçerli görünüme yer işareti koy",
   "app-menu-clone-tab": "klon sekmesi",
   "app-menu-plant-identification": "bitki tanımlama",
