openalex concept-related works search, political party ideology graph, i18n

--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "المرجعية العرض الحالي",
   "app-menu-clone-tab": "علامة التبويب استنساخ",
   "app-menu-plant-identification": "تحديد النبات",
