--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "বুকমার্ক বর্তমান দৃশ্য",
   "app-menu-clone-tab": "ক্লোন ট্যাব",
   "app-menu-plant-identification": "উদ্ভিদ সনাক্তকরণ",
