--- a/app/explore2/assets/i18n/conzept-en.json
+++ b/app/explore2/assets/i18n/conzept-en.json
@@ -168,6 +168,7 @@
   "app-guide-bookmark-similarities": "similarities",
   "app-guide-bookmark-implications": "implications",
   "app-guide-bookmark-history": "history",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-guide-see-more": "see more",
   "app-guide-page": "page",
   "app-guide-current-events": "current events",
