--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "alamar shafi na halin yanzu",
   "app-menu-clone-tab": "clone tab",
   "app-menu-plant-identification": "ganewar shuka",
