--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "aggiungere la vista corrente ai segnalibri",
   "app-menu-clone-tab": "scheda clone",
   "app-menu-plant-identification": "identificazione delle piante",
