--- a/app/explore2/assets/i18n/conzept-ko.json
+++ b/app/explore2/assets/i18n/conzept-ko.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "현재 보기를 북마크에 추가",
   "app-menu-clone-tab": "복제 탭",
   "app-menu-plant-identification": "식물 식별",
