--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "land trend",
   "app-menu-bookmark-current-view": "bladwijzer huidige URL",
   "app-menu-clone-tab": "tabblad kloon",
   "app-menu-plant-identification": "identificatie van planten",
