--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "marcar a visualização atual",
   "app-menu-clone-tab": "guia clonar",
   "app-menu-plant-identification": "identificação de plantas",
