--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "alamisho mwonekano wa sasa",
   "app-menu-clone-tab": "kichupo cha clone",
   "app-menu-plant-identification": "kitambulisho cha mimea",
