--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "బుక్‌మార్క్ ప్రస్తుత వీక్షణ",
   "app-menu-clone-tab": "క్లోన్ ట్యాబ్",
   "app-menu-plant-identification": "మొక్క గుర్తింపు",
