--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "đánh dấu chế độ xem hiện tại",
   "app-menu-clone-tab": "tab nhân bản",
   "app-menu-plant-identification": "nhận dạng thực vật",
