--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "bookmark karon nga pagtan-aw",
   "app-menu-clone-tab": "clone nga tab",
   "app-menu-plant-identification": "pag-ila sa tanom",
