--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "uložit aktuální pohled do záložek",
   "app-menu-clone-tab": "karta klon",
   "app-menu-plant-identification": "identifikace rostlin",
