--- a/app/explore2/assets/i18n/conzept-da.json
+++ b/app/explore2/assets/i18n/conzept-da.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "bogmærke den aktuelle visning",
   "app-menu-clone-tab": "klon fane",
   "app-menu-plant-identification": "planteidentifikation",
