--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
   "app-menu-clone-tab": "Registerkarte „Klonen“.",
   "app-menu-plant-identification": "Pflanzenidentifikation",
