--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "tandai tampilan saat ini",
   "app-menu-clone-tab": "tab klon",
   "app-menu-plant-identification": "identifikasi tanaman",
