--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "現在のビューをブックマークする",
   "app-menu-clone-tab": "クローンタブ",
   "app-menu-plant-identification": "植物の同定",
