--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "добавить в закладки текущий вид",
   "app-menu-clone-tab": "клонировать вкладку",
   "app-menu-plant-identification": "идентификация растений",
