--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -79,6 +79,7 @@
   "app-guide-radio-map": "radio map",
   "app-guide-world-statistics": "development trends",
   "app-guide-news-gdelt": "GDELT",
+  "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "додати закладку для поточного перегляду",
   "app-menu-clone-tab": "клонувати вкладку",
   "app-menu-plant-identification": "ідентифікація рослин",
