iNaturalist datasource with Qid promise operations

--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -142,7 +142,7 @@
   "app-section-media-software": "software",
   "app-section-meta": "meta",
   "app-section-society": "sociedad",
-  "app-section-society-sports": "Deportes",
+  "app-section-society-sports": "deportes",
   "app-section-society-food": "alimento",
   "app-section-library-philosophy": "filosofía",
   "app-section-library-religion": "religión",
